--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
-RESEND_API_KEY=re_123456789
-CONTACT_EMAIL=hello@convertcase.net
-EMAIL_FROM=onboarding@resend.dev
+NEXT_PUBLIC_RESEND_API_KEY=re_123456789
+NEXT_PUBLIC_CONTACT_EMAIL=montasimmamun@gmail.com
+NEXT_PUBLIC_EMAIL_FROM=onboarding@resend.dev
